--- a/src/smartome/.env
+++ b/src/smartome/.env
@@ -3,3 +3,9 @@ EXPO_PUBLIC_DOMAIN_SERVER_API=https://smartome.dnmanh.io.vn/api
 
 EXPO_PUBLIC_TOKEN_ACCESS_NAME=token_access
 EXPO_PUBLIC_TOKEN_REFRESH_NAME=token_refresh
+
+EXPO_PUBLIC_MQTT_BROKER_HOST=192.168.1.4
+EXPO_PUBLIC_MQTT_BROKER_PORT=8083
+EXPO_PUBLIC_MQTT_BROKER_PATH=/mqtt
+EXPO_PUBLIC_MQTT_BROKER_USERNAME=app
+EXPO_PUBLIC_MQTT_BROKER_PASSWORD=123
