--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -32,6 +32,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
+    "paho-mqtt": "^1.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
@@ -39,12 +40,12 @@
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-web": "~0.19.10"
+    "react-native-screens": "~4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/paho-mqtt": "^1.0.10",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
