--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start -c --port 65534",
+    "dev": "expo start --dev-client --port 65534",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -17,6 +18,8 @@
   "dependencies": {
     "@dotmind/rn-shadow-generator": "^1.0.4",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/cli": "^15.1.3",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.0.2",
     "@react-navigation/native": "^7.0.1",
     "@react-navigation/stack": "^7.0.1",
@@ -24,8 +27,10 @@
     "expo": "^52.0.6",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-dev-client": "~5.0.7",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.4",
     "expo-router": "~4.0.5",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.9",
@@ -37,10 +42,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0"
+    "react-native-screens": "~4.0.0",
+    "react-native-wifi-reborn": "^4.13.0",
+    "expo-network": "~7.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
