--- a/src/smartome/.env.example
+++ b/src/smartome/.env.example
@@ -4,8 +4,8 @@ EXPO_PUBLIC_DOMAIN_SERVER_API=https://localhost/api
 EXPO_PUBLIC_TOKEN_ACCESS_NAME=token_access
 EXPO_PUBLIC_TOKEN_REFRESH_NAME=token_refresh
 
-EXPO_PUBLIC_MQTT_BROKER_HOST=mqtt.dnmanh.io.vn
+EXPO_PUBLIC_MQTT_BROKER_HOST=192.168.1.4
 EXPO_PUBLIC_MQTT_BROKER_PORT=8083
 EXPO_PUBLIC_MQTT_BROKER_PATH=/mqtt
 EXPO_PUBLIC_MQTT_BROKER_USERNAME=appUser
-EXPO_PUBLIC_MQTT_BROKER_PASSWORD=123App123
+EXPO_PUBLIC_MQTT_BROKER_PASSWORD=123
