--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -20,17 +20,21 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/cli": "^15.1.3",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.0.2",
     "@react-navigation/native": "^7.0.1",
     "@react-navigation/stack": "^7.0.1",
     "axios": "^1.7.7",
     "expo": "^52.0.6",
+    "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.7",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.4",
+    "expo-network": "~7.0.4",
     "expo-router": "~4.0.5",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.9",
@@ -47,8 +51,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
-    "react-native-wifi-reborn": "^4.13.0",
-    "expo-network": "~7.0.4"
+    "react-native-vision-camera": "^4.6.3",
+    "react-native-wifi-reborn": "^4.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
