--- a/src/smartome/.env
+++ b/src/smartome/.env
@@ -1,8 +1,10 @@
-EXPO_PUBLIC_DOMAIN_SERVER=https://localhost
-EXPO_PUBLIC_DOMAIN_SERVER_API=https://localhost/api
+EXPO_PUBLIC_DOMAIN_SERVER=http://192.168.1.9:8000
+EXPO_PUBLIC_DOMAIN_SERVER_API=http://192.168.1.9:8000/api
 
-EXPO_PUBLIC_TOKEN_ACCESS_NAME=token_access
-EXPO_PUBLIC_TOKEN_REFRESH_NAME=token_refresh
+EXPO_PUBLIC_TOKEN_ACCESS_NAME=access_token
+EXPO_PUBLIC_TOKEN_REFRESH_NAME=refresh_token
+# 30 seconds
+EXPO_PUBLIC_GRACE_PERIOD_BEFORE_TOKEN_EXPIRES=10000
 
 EXPO_PUBLIC_MQTT_BROKER_HOST=192.168.1.4
 EXPO_PUBLIC_MQTT_BROKER_PORT=8083
