--- a/src/smartome/.env.example
+++ b/src/smartome/.env.example
@@ -3,6 +3,8 @@ EXPO_PUBLIC_DOMAIN_SERVER_API=https://localhost/api
 
 EXPO_PUBLIC_TOKEN_ACCESS_NAME=token_access
 EXPO_PUBLIC_TOKEN_REFRESH_NAME=token_refresh
+# 30 seconds
+EXPO_PUBLIC_GRACE_PERIOD_BEFORE_TOKEN_EXPIRES=100000
 
 EXPO_PUBLIC_MQTT_BROKER_HOST=192.168.1.4
 EXPO_PUBLIC_MQTT_BROKER_PORT=8083
