[DEV] create device service [REFACTOR] change path for proto files

--- a/src/server/device/package.json
+++ b/src/server/device/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gateway",
+  "name": "device",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -19,40 +19,45 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "config-project-global:install": "npm i ../config-project-global",
-    "proto:auth": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/config-project-global/proto --ts_proto_out=src/proto/ node_modules/config-project-global/proto/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:device": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/config-project-global/proto --ts_proto_out=src/proto/ node_modules/config-project-global/proto/device.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
-    "proto:all": "npm run proto:auth && npm run proto:device",
+    "proto:all": "npm run proto:device",
     "mtls:generate-private-key-and-csr": "node ./scripts/generate-private-key-and-CSR.js",
     "mtls:generate-certificate": "node ./scripts/generate-certificate.js",
-    "mtls:all": "npm run mtls:generate-private-key-and-csr && npm run mtls:generate-certificate"
+    "mtls:all": "npm run config-project-global:install && npm run mtls:generate-private-key-and-csr && npm run mtls:generate-certificate"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.11.1",
-    "@grpc/proto-loader": "^0.7.13",
-    "@nestjs/common": "^10.0.0",
+    "@grpc/grpc-js": "^1.11.2",
+    "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.4.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "config-project-global": "file:../config-project-global",
-    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "fastify": "^5.0.0",
+    "fix-esm": "^1.0.1",
     "grpc-tools": "^1.12.4",
     "lodash": "^4.17.21",
+    "mysql2": "^3.11.0",
+    "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.16",
+    "pg": "^8.12.0",
     "prompt-sync": "^4.2.0",
     "protobufjs": "^7.4.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.2",
     "@types/node": "^20.16.2",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -65,10 +70,8 @@
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
-    "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
-    "ts-proto": "^2.0.3",
-    "tsconfig-paths": "^4.2.0",
+    "ts-proto": "^2.2.0",
     "typescript": "^5.1.3"
   },
   "jest": {
