--- a/src/server/gateway/package.json
+++ b/src/server/gateway/package.json
@@ -21,7 +21,8 @@
     "config-project-global:install": "npm i ../config-project-global",
     "proto:auth": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/config-project-global/proto --ts_proto_out=src/proto/ node_modules/config-project-global/proto/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:device": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/config-project-global/proto --ts_proto_out=src/proto/ node_modules/config-project-global/proto/device.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
-    "proto:all": "npm run proto:auth && npm run proto:device",
+    "proto:house": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto.cmd -I=./node_modules/config-project-global/proto --ts_proto_out=src/proto/ node_modules/config-project-global/proto/house.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
+    "proto:all": "npm run proto:auth && npm run proto:device && npm run proto:house",
     "mtls:generate-private-key-and-csr": "node ./scripts/generate-private-key-and-CSR.js",
     "mtls:generate-certificate": "node ./scripts/generate-certificate.js",
     "mtls:all": "npm run mtls:generate-private-key-and-csr && npm run mtls:generate-certificate"
