--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -52,7 +52,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
     "react-native-vision-camera": "^4.6.3",
-    "react-native-wifi-reborn": "^4.13.0"
+    "react-native-wifi-reborn": "^4.13.0",
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
