[DEV] setting deivce screen, history device screen

--- a/src/smartome/app.json
+++ b/src/smartome/app.json
@@ -21,8 +21,7 @@
         "foregroundImage": "./assets/images/app/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.dnmanh.smartome",
-      "googleServicesFile": "./google-services.json"
+      "package": "com.dnmanh.smartome"
     },
     "web": {
       "bundler": "metro",
