--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -25,35 +25,36 @@
     "@react-navigation/native": "^7.0.1",
     "@react-navigation/stack": "^7.0.1",
     "axios": "^1.7.7",
-    "expo": "^52.0.6",
+    "expo": "~52.0.24",
     "expo-barcode-scanner": "^13.0.1",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.10",
     "expo-constants": "~17.0.3",
-    "expo-dev-client": "~5.0.7",
+    "expo-dev-client": "~5.0.8",
     "expo-font": "~13.0.1",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.4",
     "expo-network": "~7.0.4",
-    "expo-router": "~4.0.5",
+    "expo-router": "~4.0.16",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.9",
+    "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
     "expo-web-browser": "~14.0.1",
     "paho-mqtt": "^1.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vision-camera": "^4.6.3",
-    "react-native-wifi-reborn": "^4.13.0",
-    "expo-linear-gradient": "~14.0.1"
+    "react-native-wifi-reborn": "^4.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
