--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start -c --port 65534",
-    "dev": "expo start --dev-client --port 65534 -c",
+    "dev": "expo start -c --dev-client --port 65534",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
