--- a/src/smartome/app.json
+++ b/src/smartome/app.json
@@ -1,52 +1,61 @@
 {
-  "expo": {
-    "name": "smartome",
-    "slug": "smartome",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/app/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/images/app/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/app/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.dnmanh.smartome"
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/app/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      "expo-secure-store",
-      "expo-font",
-      "react-native-wifi-reborn",
-      "expo-barcode-scanner",
-      "react-native-vision-camera",
-      "@react-native-google-signin/google-signin"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "a64f6fd9-99ab-4ffd-bab8-161ceb56ee5a"
-      }
+    "expo": {
+        "name": "smartome",
+        "slug": "smartome",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/images/app/icon.png",
+        "scheme": "myapp",
+        "userInterfaceStyle": "automatic",
+        "newArchEnabled": true,
+        "splash": {
+            "image": "./assets/images/app/splash.png",
+            "resizeMode": "cover",
+            "backgroundColor": "#ffffff",
+            "imageWidth": 336
+        },
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/images/app/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "com.dnmanh.smartome",
+            "usesCleartextTraffic": true
+        },
+        "web": {
+            "bundler": "metro",
+            "output": "static",
+            "favicon": "./assets/images/app/favicon.png"
+        },
+        "plugins": [
+            "expo-router",
+            "expo-secure-store",
+            "expo-font",
+            "react-native-wifi-reborn",
+            "expo-barcode-scanner",
+            "react-native-vision-camera",
+            "@react-native-google-signin/google-signin",
+            [
+                "expo-build-properties", {
+                    "android": {
+                        "usesCleartextTraffic": true
+                    }
+                }
+            ]
+        ],
+        "experiments": {
+            "typedRoutes": true
+        },
+        "extra": {
+            "router": {
+                "origin": false
+            },
+            "eas": {
+                "projectId": "a64f6fd9-99ab-4ffd-bab8-161ceb56ee5a"
+            }
+        }
     }
-  }
 }
