--- a/src/smartome/package.json
+++ b/src/smartome/package.json
@@ -54,7 +54,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vision-camera": "^4.6.3",
-    "react-native-wifi-reborn": "^4.13.0"
+    "react-native-wifi-reborn": "^4.13.0",
+    "expo-build-properties": "~0.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
